# template-cpp-cmake-conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
test/: CMakeLists.txt  test_dummy.cpp
